4/Compilers4/bisonfinal.output
Terminals unused in grammar

   DEFAULT
   COLON
   INTEGER_LITERAL


Grammar

    0 $accept: grammar_start $end

    1 grammar_start: stmtlist

    2 stmtlist: stmt stmtlist
    3         | empty

    4 $@1: %empty

    5 $@2: %empty

    6 stmt: IF LP exprc rp LCP $@1 stmtlist $@2 RCP elsestmt

    7 $@3: %empty

    8 stmt: WHILE LP exprc rp LCP $@3 stmtlist RCP

    9 $@4: %empty

   10 stmt: FOR LP expression semi exprc semi expression rp LCP $@4 stmtlist RCP
   11     | SWITCH LP arithexpr rp switchstmt
   12     | expression semi
   13     | d semi
   14     | func_decl
   15     | return_stmt
   16     | break_stmt
   17     | continue_stmt

   18 break_stmt: BREAK

   19 continue_stmt: CONTINUE

   20 return_stmt: RETURN expression semi

   21 $@5: %empty

   22 $@6: %empty

   23 elsestmt: ELSEIF LP exprc rp LCP $@5 stmtlist $@6 RCP elsestmt

   24 $@7: %empty

   25 $@8: %empty

   26 elsestmt: ELSE LCP $@7 stmtlist $@8 RCP
   27         | %empty

   28 d: type list_var

   29 list_var: id_arr X
   30         | id_arr X COMMA list_var

   31 X: EQ arithexpr
   32  | %empty

   33 id_arr: ID
   34       | ID br_dimlist

   35 br_dimlist: LSP mathexpr RSP
   36           | br_dimlist LSP mathexpr RSP

   37 type: INT
   38     | FLOAT
   39     | CHAR
   40     | VOID

   41 exprc: A
   42      | exprc OR A
   43      | exprc AND A

   44 A: expression LT expression
   45  | expression GT expression
   46  | expression EQEQ expression
   47  | expression LT EQ expression
   48  | expression GT EQ expression
   49  | expression

   50 $@9: %empty

   51 $@10: %empty

   52 switchstmt: CASE LP arithexpr rp LCP $@9 stmtlist $@10 RCP switchstmt
   53           | %empty

   54 expression: RUN LP func_arg_list rp
   55           | SET_JOB_AFFINITY LP func_arg_list rp
   56           | SET_ALGO LP func_arg_list rp
   57           | DISCARD_JOB LP func_arg_list rp
   58           | WAIT LP func_arg_list rp
   59           | initial
   60           | mathexpr
   61           | %empty

   62 initial: id_arr EQ init

   63 init: constructor
   64     | initial

   65 mathexpr: assignexpr
   66         | arithexpr

   67 assignexpr: id_arr EQ mathexpr
   68           | id_arr PLUSEQ mathexpr
   69           | id_arr MINUSEQ mathexpr
   70           | id_arr MULTIPLYEQ mathexpr
   71           | id_arr DIVIDEEQ mathexpr
   72           | id_arr MINUSMINUS
   73           | id_arr PLUSPLUS

   74 arithexpr: expr1 BITAND arithexpr
   75          | expr1

   76 expr1: expr2 BITOR expr1
   77      | expr2

   78 expr2: expr2 PLUS expr3
   79      | expr2 MINUS expr3
   80      | expr3

   81 expr3: expr3 MULTIPLY expr4
   82      | expr3 DIVIDE expr4
   83      | expr4

   84 expr4: NOT factor
   85      | factor

   86 factor: NUM
   87       | CHARACTER
   88       | id_arr DOT function
   89       | constructor DOT function
   90       | id_arr
   91       | LP arithexpr rp
   92       | func_call

   93 constructor: PROCESSOR LP proc_parameter_list rp
   94            | LINK LP link_parameter_list rp
   95            | MEMORY LP memory_parameter_list rp
   96            | JOB LP job_parameter_list rp
   97            | CLUSTER LP cluster_parameter_list rp
   98            | SCHEDULER LP scheduler_parameter_list rp

   99 proc_parameter_list: proc_parameter C

  100 C: COMMA proc_parameter_list
  101  | %empty

  102 link_parameter_list: link_parameter D

  103 D: COMMA link_parameter_list
  104  | %empty

  105 memory_parameter_list: memory_parameter E

  106 E: COMMA memory_parameter_list
  107  | %empty

  108 job_parameter_list: job_parameter F

  109 F: COMMA job_parameter_list
  110  | %empty

  111 cluster_parameter_list: cluster_parameter G

  112 G: COMMA cluster_parameter_list
  113  | %empty

  114 scheduler_parameter_list: scheduler_parameter Z

  115 Z: COMMA scheduler_parameter_list
  116  | %empty

  117 proc_parameter: ARCHITECTURE_TYPE EQ value
  118               | ISA EQ value
  119               | CLOCK_SPEED EQ value
  120               | L1_MEMORY EQ value
  121               | L2_MEMORY EQ value
  122               | NAME EQ value
  123               | argument
  124               | %empty

  125 argument: value
  126         | LSP valuearray rsp

  127 valuearray: value H
  128           | %empty

  129 H: COMMA valuearray
  130  | %empty

  131 link_parameter: START_POINT EQ value
  132               | END_POINT EQ value
  133               | BANDWIDTH EQ value
  134               | CHANNEL_CAPACITY EQ value
  135               | NAME EQ value
  136               | value
  137               | %empty

  138 memory_parameter: MEMORY_TYPE EQ value
  139                 | MEM_SIZE EQ value
  140                 | NAME EQ value
  141                 | value
  142                 | %empty

  143 job_parameter: JOB_ID EQ value
  144              | FLOPS_REQUIRED EQ value
  145              | DEADLINE EQ value
  146              | MEM_REQUIRED EQ value
  147              | AFFINITY EQ argument
  148              | argument
  149              | %empty

  150 cluster_parameter: PROCESSORS EQ argument
  151                  | TOPOLOGY EQ value
  152                  | LINK_BANDWIDTH EQ value
  153                  | LINK_CAPACITY EQ value
  154                  | NAME EQ value
  155                  | argument
  156                  | %empty

  157 scheduler_parameter: CLUSTER EQ value
  158                    | JOB_ARRAY EQ argument
  159                    | PROCESSOR_ARRAY EQ argument
  160                    | argument
  161                    | %empty

  162 function: IS_RUNNING LP func_arg_list rp
  163         | SUBMIT_JOBS LP func_arg_list rp
  164         | GET_CLOCK_SPEED LP func_arg_list rp
  165         | GET_AVAILABLE_MEMORY LP func_arg_list rp
  166         | GET_MEMORY LP func_arg_list rp
  167         | GET_LOAD LP func_arg_list rp
  168         | MAX_JOBS LP func_arg_list rp

  169 func_arg_list: argument I
  170              | %empty

  171 I: COMMA func_arg_list
  172  | %empty

  173 value: SQUOTE id_arr SQUOTE
  174      | DQUOTE id_arr DQUOTE
  175      | arithexpr
  176      | constructor

  177 semi: SEMI
  178     | error

  179 rp: RP
  180   | error

  181 rsp: RSP
  182    | error

  183 $@11: %empty

  184 func_decl: func_head LCP $@11 stmtlist_body RCP

  185 $@12: %empty

  186 func_head: res_id LP $@12 decl_plist RP

  187 res_id: type ID

  188 decl_plist: decl_pl
  189           | %empty

  190 decl_pl: decl_pl COMMA decl_param
  191        | decl_param

  192 decl_param: type ID
  193           | type ID LSP RSP

  194 stmtlist_body: stmt_body stmtlist_body
  195              | empty

  196 $@13: %empty

  197 $@14: %empty

  198 stmt_body: IF LP exprc rp LCP $@13 stmtlist $@14 RCP elsestmt

  199 $@15: %empty

  200 stmt_body: WHILE LP exprc rp LCP $@15 stmtlist RCP

  201 $@16: %empty

  202 stmt_body: FOR LP expression semi exprc semi expression rp LCP $@16 stmtlist RCP
  203          | SWITCH LP arithexpr rp switchstmt
  204          | expression semi
  205          | d semi
  206          | return_stmt
  207          | break_stmt
  208          | continue_stmt

  209 func_call: ID LP paramlist RP

  210 paramlist: plist
  211          | %empty

  212 plist: plist COMMA arithexpr
  213      | arithexpr

  214 empty: %empty


Terminals, with rules where they appear

$end (0) 0
error (256) 178 180 182
IF (258) 6 198
ELSE (259) 26
WHILE (260) 8 200
FOR (261) 10 202
SWITCH (262) 11 203
CASE (263) 52
DEFAULT (264)
LP (265) 6 8 10 11 23 52 54 55 56 57 58 91 93 94 95 96 97 98 162 163
    164 165 166 167 168 186 198 200 202 203 209
RP (266) 179 186 209
LCP (267) 6 8 10 23 26 52 184 198 200 202
RCP (268) 6 8 10 23 26 52 184 198 200 202
LSP (269) 35 36 126 193
RSP (270) 35 36 181 193
SEMI (271) 177
COLON (272)
LT (273) 44 47
GT (274) 45 48
EQ (275) 31 47 48 62 67 117 118 119 120 121 122 131 132 133 134 135
    138 139 140 143 144 145 146 147 150 151 152 153 154 157 158 159
PLUS (276) 78
MINUS (277) 79
MULTIPLY (278) 81
DIVIDE (279) 82
BITOR (280) 76
BITAND (281) 74
NOT (282) 84
ID (283) 33 34 187 192 193 209
NUM (284) 86
DOT (285) 88 89
COMMA (286) 30 100 103 106 109 112 115 129 171 190 212
PROCESSOR (287) 93
LINK (288) 94
MEMORY (289) 95
JOB (290) 96
CLUSTER (291) 97 157
ISA (292) 118
CLOCK_SPEED (293) 119
L1_MEMORY (294) 120
L2_MEMORY (295) 121
NAME (296) 122 135 140 154
START_POINT (297) 131
END_POINT (298) 132
BANDWIDTH (299) 133
CHANNEL_CAPACITY (300) 134
MEMORY_TYPE (301) 138
MEM_SIZE (302) 139
JOB_ID (303) 143
FLOPS_REQUIRED (304) 144
DEADLINE (305) 145
MEM_REQUIRED (306) 146
PROCESSORS (307) 150
TOPOLOGY (308) 151
LINK_BANDWIDTH (309) 152
LINK_CAPACITY (310) 153
IS_RUNNING (311) 162
SUBMIT_JOBS (312) 163
OR (313) 42
AND (314) 43
PLUSEQ (315) 68
MINUSEQ (316) 69
MULTIPLYEQ (317) 70
DIVIDEEQ (318) 71
MINUSMINUS (319) 72
PLUSPLUS (320) 73
GET_CLOCK_SPEED (321) 164
RUN (322) 54
DISCARD_JOB (323) 57
GET_AVAILABLE_MEMORY (324) 165
GET_MEMORY (325) 166
ELSEIF (326) 23
AFFINITY (327) 147
EQEQ (328) 46
DQUOTE (329) 174
SQUOTE (330) 173
ARCHITECTURE_TYPE (331) 117
WAIT (332) 58
SCHEDULER (333) 98
JOB_ARRAY (334) 158
PROCESSOR_ARRAY (335) 159
SET_JOB_AFFINITY (336) 55
MAX_JOBS (337) 168
GET_LOAD (338) 167
SET_ALGO (339) 56
INT (340) 37
FLOAT (341) 38
VOID (342) 40
CHAR (343) 39
CHARACTER (344) 87
RETURN (345) 20
BREAK (346) 18
CONTINUE (347) 19
INTEGER_LITERAL (348)


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
grammar_start (95)
    on left: 1, on right: 0
stmtlist (96)
    on left: 2 3, on right: 1 2 6 8 10 23 26 52 198 200 202
stmt (97)
    on left: 6 8 10 11 12 13 14 15 16 17, on right: 2
$@1 (98)
    on left: 4, on right: 6
$@2 (99)
    on left: 5, on right: 6
$@3 (100)
    on left: 7, on right: 8
$@4 (101)
    on left: 9, on right: 10
break_stmt (102)
    on left: 18, on right: 16 207
continue_stmt (103)
    on left: 19, on right: 17 208
return_stmt (104)
    on left: 20, on right: 15 206
elsestmt (105)
    on left: 23 26 27, on right: 6 23 198
$@5 (106)
    on left: 21, on right: 23
$@6 (107)
    on left: 22, on right: 23
$@7 (108)
    on left: 24, on right: 26
$@8 (109)
    on left: 25, on right: 26
d (110)
    on left: 28, on right: 13 205
list_var (111)
    on left: 29 30, on right: 28 30
X (112)
    on left: 31 32, on right: 29 30
id_arr (113)
    on left: 33 34, on right: 29 30 62 67 68 69 70 71 72 73 88 90 173
    174
br_dimlist (114)
    on left: 35 36, on right: 34 36
type (115)
    on left: 37 38 39 40, on right: 28 187 192 193
exprc (116)
    on left: 41 42 43, on right: 6 8 10 23 42 43 198 200 202
A (117)
    on left: 44 45 46 47 48 49, on right: 41 42 43
switchstmt (118)
    on left: 52 53, on right: 11 52 203
$@9 (119)
    on left: 50, on right: 52
$@10 (120)
    on left: 51, on right: 52
expression (121)
    on left: 54 55 56 57 58 59 60 61, on right: 10 12 20 44 45 46 47
    48 49 202 204
initial (122)
    on left: 62, on right: 59 64
init (123)
    on left: 63 64, on right: 62
mathexpr (124)
    on left: 65 66, on right: 35 36 60 67 68 69 70 71
assignexpr (125)
    on left: 67 68 69 70 71 72 73, on right: 65
arithexpr (126)
    on left: 74 75, on right: 11 31 52 66 74 91 175 203 212 213
expr1 (127)
    on left: 76 77, on right: 74 75 76
expr2 (128)
    on left: 78 79 80, on right: 76 77 78 79
expr3 (129)
    on left: 81 82 83, on right: 78 79 80 81 82
expr4 (130)
    on left: 84 85, on right: 81 82 83
factor (131)
    on left: 86 87 88 89 90 91 92, on right: 84 85
constructor (132)
    on left: 93 94 95 96 97 98, on right: 63 89 176
proc_parameter_list (133)
    on left: 99, on right: 93 100
C (134)
    on left: 100 101, on right: 99
link_parameter_list (135)
    on left: 102, on right: 94 103
D (136)
    on left: 103 104, on right: 102
memory_parameter_list (137)
    on left: 105, on right: 95 106
E (138)
    on left: 106 107, on right: 105
job_parameter_list (139)
    on left: 108, on right: 96 109
F (140)
    on left: 109 110, on right: 108
cluster_parameter_list (141)
    on left: 111, on right: 97 112
G (142)
    on left: 112 113, on right: 111
scheduler_parameter_list (143)
    on left: 114, on right: 98 115
Z (144)
    on left: 115 116, on right: 114
proc_parameter (145)
    on left: 117 118 119 120 121 122 123 124, on right: 99
argument (146)
    on left: 125 126, on right: 123 147 148 150 155 158 159 160 169
valuearray (147)
    on left: 127 128, on right: 126 129
H (148)
    on left: 129 130, on right: 127
link_parameter (149)
    on left: 131 132 133 134 135 136 137, on right: 102
memory_parameter (150)
    on left: 138 139 140 141 142, on right: 105
job_parameter (151)
    on left: 143 144 145 146 147 148 149, on right: 108
cluster_parameter (152)
    on left: 150 151 152 153 154 155 156, on right: 111
scheduler_parameter (153)
    on left: 157 158 159 160 161, on right: 114
function (154)
    on left: 162 163 164 165 166 167 168, on right: 88 89
func_arg_list (155)
    on left: 169 170, on right: 54 55 56 57 58 162 163 164 165 166
    167 168 171
I (156)
    on left: 171 172, on right: 169
value (157)
    on left: 173 174 175 176, on right: 117 118 119 120 121 122 125
    127 131 132 133 134 135 136 138 139 140 141 143 144 145 146 151
    152 153 154 157
semi (158)
    on left: 177 178, on right: 10 12 13 20 202 204 205
rp (159)
    on left: 179 180, on right: 6 8 10 11 23 52 54 55 56 57 58 91 93
    94 95 96 97 98 162 163 164 165 166 167 168 198 200 202 203
rsp (160)
    on left: 181 182, on right: 126
func_decl (161)
    on left: 184, on right: 14
$@11 (162)
    on left: 183, on right: 184
func_head (163)
    on left: 186, on right: 184
$@12 (164)
    on left: 185, on right: 186
res_id (165)
    on left: 187, on right: 186
decl_plist (166)
    on left: 188 189, on right: 186
decl_pl (167)
    on left: 190 191, on right: 188 190
decl_param (168)
    on left: 192 193, on right: 190 191
stmtlist_body (169)
    on left: 194 195, on right: 184 194
stmt_body (170)
    on left: 198 200 202 203 204 205 206 207 208, on right: 194
$@13 (171)
    on left: 196, on right: 198
$@14 (172)
    on left: 197, on right: 198
$@15 (173)
    on left: 199, on right: 200
$@16 (174)
    on left: 201, on right: 202
func_call (175)
    on left: 209, on right: 92
paramlist (176)
    on left: 210 211, on right: 209
plist (177)
    on left: 212 213, on right: 210 212
empty (178)
    on left: 214, on right: 3 195


State 0

    0 $accept: . grammar_start $end

    IF                shift, and go to state 1
    WHILE             shift, and go to state 2
    FOR               shift, and go to state 3
    SWITCH            shift, and go to state 4
    LP                shift, and go to state 5
    NOT               shift, and go to state 6
    ID                shift, and go to state 7
    NUM               shift, and go to state 8
    PROCESSOR         shift, and go to state 9
    LINK              shift, and go to state 10
    MEMORY            shift, and go to state 11
    JOB               shift, and go to state 12
    CLUSTER           shift, and go to state 13
    RUN               shift, and go to state 14
    DISCARD_JOB       shift, and go to state 15
    WAIT              shift, and go to state 16
    SCHEDULER         shift, and go to state 17
    SET_JOB_AFFINITY  shift, and go to state 18
    SET_ALGO          shift, and go to state 19
    INT               shift, and go to state 20
    FLOAT             shift, and go to state 21
    VOID              shift, and go to state 22
    CHAR              shift, and go to state 23
    CHARACTER         shift, and go to state 24
    RETURN            shift, and go to state 25
    BREAK             shift, and go to state 26
    CONTINUE          shift, and go to state 27

    $end      reduce using rule 214 (empty)
    $default  reduce using rule 61 (expression)

    grammar_start  go to state 28
    stmtlist       go to state 29
    stmt           go to state 30
    break_stmt     go to state 31
    continue_stmt  go to state 32
    return_stmt    go to state 33
    d              go to state 34
    id_arr         go to state 35
    type           go to state 36
    expression     go to state 37
    initial        go to state 38
    mathexpr       go to state 39
    assignexpr     go to state 40
    arithexpr      go to state 41
    expr1          go to state 42
    expr2          go to state 43
    expr3          go to state 44
    expr4          go to state 45
    factor         go to state 46
    constructor    go to state 47
    func_decl      go to state 48
    func_head      go to state 49
    res_id         go to state 50
    func_call      go to state 51
    empty          go to state 52


State 1

    6 stmt: IF . LP exprc rp LCP $@1 stmtlist $@2 RCP elsestmt

    LP  shift, and go to state 53


State 2

    8 stmt: WHILE . LP exprc rp LCP $@3 stmtlist RCP

    LP  shift, and go to state 54


State 3

   10 stmt: FOR . LP expression semi exprc semi expression rp LCP $@4 stmtlist RCP

    LP  shift, and go to state 55


State 4

   11 stmt: SWITCH . LP arithexpr rp switchstmt

    LP  shift, and go to state 56


State 5

   91 factor: LP . arithexpr rp

    LP         shift, and go to state 5
    NOT        shift, and go to state 6
    ID         shift, and go to state 7
    NUM        shift, and go to state 8
    PROCESSOR  shift, and go to state 9
    LINK       shift, and go to state 10
    MEMORY     shift, and go to state 11
    JOB        shift, and go to state 12
    CLUSTER    shift, and go to state 13
    SCHEDULER  shift, and go to state 17
    CHARACTER  shift, and go to state 24

    id_arr       go to state 57
    arithexpr    go to state 58
    expr1        go to state 42
    expr2        go to state 43
    expr3        go to state 44
    expr4        go to state 45
    factor       go to state 46
    constructor  go to state 47
    func_call    go to state 51


State 6

   84 expr4: NOT . factor

    LP         shift, and go to state 5
    ID         shift, and go to state 7
    NUM        shift, and go to state 8
    PROCESSOR  shift, and go to state 9
    LINK       shift, and go to state 10
    MEMORY     shift, and go to state 11
    JOB        shift, and go to state 12
    CLUSTER    shift, and go to state 13
    SCHEDULER  shift, and go to state 17
    CHARACTER  shift, and go to state 24

    id_arr       go to state 57
    factor       go to state 59
    constructor  go to state 47
    func_call    go to state 51


State 7

   33 id_arr: ID .
   34       | ID . br_dimlist
  209 func_call: ID . LP paramlist RP

    LP   shift, and go to state 60
    LSP  shift, and go to state 61

    $default  reduce using rule 33 (id_arr)

    br_dimlist  go to state 62


State 8

   86 factor: NUM .

    $default  reduce using rule 86 (factor)


State 9

   93 constructor: PROCESSOR . LP proc_parameter_list rp

    LP  shift, and go to state 63


State 10

   94 constructor: LINK . LP link_parameter_list rp

    LP  shift, and go to state 64


State 11

   95 constructor: MEMORY . LP memory_parameter_list rp

    LP  shift, and go to state 65


State 12

   96 constructor: JOB . LP job_parameter_list rp

    LP  shift, and go to state 66


State 13

   97 constructor: CLUSTER . LP cluster_parameter_list rp

    LP  shift, and go to state 67


State 14

   54 expression: RUN . LP func_arg_list rp

    LP  shift, and go to state 68


State 15

   57 expression: DISCARD_JOB . LP func_arg_list rp

    LP  shift, and go to state 69


State 16

   58 expression: WAIT . LP func_arg_list rp

    LP  shift, and go to state 70


State 17

   98 constructor: SCHEDULER . LP scheduler_parameter_list rp

    LP  shift, and go to state 71


State 18

   55 expression: SET_JOB_AFFINITY . LP func_arg_list rp

    LP  shift, and go to state 72


State 19

   56 expression: SET_ALGO . LP func_arg_list rp

    LP  shift, and go to state 73


State 20

   37 type: INT .

    $default  reduce using rule 37 (type)


State 21

   38 type: FLOAT .

    $default  reduce using rule 38 (type)


State 22

   40 type: VOID .

    $default  reduce using rule 40 (type)


State 23

   39 type: CHAR .

    $default  reduce using rule 39 (type)


State 24

   87 factor: CHARACTER .

    $default  reduce using rule 87 (factor)


State 25

   20 return_stmt: RETURN . expression semi

    LP                shift, and go to state 5
    NOT               shift, and go to state 6
    ID                shift, and go to state 7
    NUM               shift, and go to state 8
    PROCESSOR         shift, and go to state 9
    LINK              shift, and go to state 10
    MEMORY            shift, and go to state 11
    JOB               shift, and go to state 12
    CLUSTER           shift, and go to state 13
    RUN               shift, and go to state 14
    DISCARD_JOB       shift, and go to state 15
    WAIT              shift, and go to state 16
    SCHEDULER         shift, and go to state 17
    SET_JOB_AFFINITY  shift, and go to state 18
    SET_ALGO          shift, and go to state 19
    CHARACTER         shift, and go to state 24

    $default  reduce using rule 61 (expression)

    id_arr       go to state 35
    expression   go to state 74
    initial      go to state 38
    mathexpr     go to state 39
    assignexpr   go to state 40
    arithexpr    go to state 41
    expr1        go to state 42
    expr2        go to state 43
    expr3        go to state 44
    expr4        go to state 45
    factor       go to state 46
    constructor  go to state 47
    func_call    go to state 51


State 26

   18 break_stmt: BREAK .

    $default  reduce using rule 18 (break_stmt)


State 27

   19 continue_stmt: CONTINUE .

    $default  reduce using rule 19 (continue_stmt)


State 28

    0 $accept: grammar_start . $end

    $end  shift, and go to state 75


State 29

    1 grammar_start: stmtlist .

    $default  reduce using rule 1 (grammar_start)


State 30

    2 stmtlist: stmt . stmtlist

    IF                shift, and go to state 1
    WHILE             shift, and go to state 2
    FOR               shift, and go to state 3
    SWITCH            shift, and go to state 4
    LP                shift, and go to state 5
    NOT               shift, and go to state 6
    ID                shift, and go to state 7
    NUM               shift, and go to state 8
    PROCESSOR         shift, and go to state 9
    LINK              shift, and go to state 10
    MEMORY            shift, and go to state 11
    JOB               shift, and go to state 12
    CLUSTER           shift, and go to state 13
    RUN               shift, and go to state 14
    DISCARD_JOB       shift, and go to state 15
    WAIT              shift, and go to state 16
    SCHEDULER         shift, and go to state 17
    SET_JOB_AFFINITY  shift, and go to state 18
    SET_ALGO          shift, and go to state 19
    INT               shift, and go to state 20
    FLOAT             shift, and go to state 21
    VOID              shift, and go to state 22
    CHAR              shift, and go to state 23
    CHARACTER         shift, and go to state 24
    RETURN            shift, and go to state 25
    BREAK             shift, and go to state 26
    CONTINUE          shift, and go to state 27

    $end      reduce using rule 214 (empty)
    RCP       reduce using rule 214 (empty)
    $default  reduce using rule 61 (expression)

    stmtlist       go to state 76
    stmt           go to state 30
    break_stmt     go to state 31
    continue_stmt  go to state 32
    return_stmt    go to state 33
    d              go to state 34
    id_arr         go to state 35
    type           go to state 36
    expression     go to state 37
    initial        go to state 38
    mathexpr       go to state 39
    assignexpr     go to state 40
    arithexpr      go to state 41
    expr1          go to state 42
    expr2          go to state 43
    expr3          go to state 44
    expr4          go to state 45
    factor         go to state 46
    constructor    go to state 47
    func_decl      go to state 48
    func_head      go to state 49
    res_id         go to state 50
    func_call      go to state 51
    empty          go to state 52


State 31

   16 stmt: break_stmt .

    $default  reduce using rule 16 (stmt)


State 32

   17 stmt: continue_stmt .

    $default  reduce using rule 17 (stmt)


State 33

   15 stmt: return_stmt .

    $default  reduce using rule 15 (stmt)


State 34

   13 stmt: d . semi

    error  shift, and go to state 77
    SEMI   shift, and go to state 78

    semi  go to state 79


State 35

   62 initial: id_arr . EQ init
   67 assignexpr: id_arr . EQ mathexpr
   68           | id_arr . PLUSEQ mathexpr
   69           | id_arr . MINUSEQ mathexpr
   70           | id_arr . MULTIPLYEQ mathexpr
   71           | id_arr . DIVIDEEQ mathexpr
   72           | id_arr . MINUSMINUS
   73           | id_arr . PLUSPLUS
   88 factor: id_arr . DOT function
   90       | id_arr .

    EQ          shift, and go to state 80
    DOT         shift, and go to state 81
    PLUSEQ      shift, and go to state 82
    MINUSEQ     shift, and go to state 83
    MULTIPLYEQ  shift, and go to state 84
    DIVIDEEQ    shift, and go to state 85
    MINUSMINUS  shift, and go to state 86
    PLUSPLUS    shift, and go to state 87

    $default  reduce using rule 90 (factor)


State 36

   28 d: type . list_var
  187 res_id: type . ID

    ID  shift, and go to state 88

    list_var  go to state 89
    id_arr    go to state 90


State 37

   12 stmt: expression . semi

    error  shift, and go to state 77
    SEMI   shift, and go to state 78

    semi  go to state 91


State 38

   59 expression: initial .

    $default  reduce using rule 59 (expression)


State 39

   60 expression: mathexpr .

    $default  reduce using rule 60 (expression)


State 40

   65 mathexpr: assignexpr .

    $default  reduce using rule 65 (mathexpr)


State 41

   66 mathexpr: arithexpr .

    $default  reduce using rule 66 (mathexpr)


State 42

   74 arithexpr: expr1 . BITAND arithexpr
   75          | expr1 .

    BITAND  shift, and go to state 92

    $default  reduce using rule 75 (arithexpr)


State 43

   76 expr1: expr2 . BITOR expr1
   77      | expr2 .
   78 expr2: expr2 . PLUS expr3
   79      | expr2 . MINUS expr3

    PLUS   shift, and go to state 93
    MINUS  shift, and go to state 94
    BITOR  shift, and go to state 95

    $default  reduce using rule 77 (expr1)


State 44

   80 expr2: expr3 .
   81 expr3: expr3 . MULTIPLY expr4
   82      | expr3 . DIVIDE expr4

    MULTIPLY  shift, and go to state 96
    DIVIDE    shift, and go to state 97

    $default  reduce using rule 80 (expr2)


State 45

   83 expr3: expr4 .

    $default  reduce using rule 83 (expr3)


State 46

   85 expr4: factor .

    $default  reduce using rule 85 (expr4)


State 47

   89 factor: constructor . DOT function

    DOT  shift, and go to state 98


State 48

   14 stmt: func_decl .

    $default  reduce using rule 14 (stmt)


State 49

  184 func_decl: func_head . LCP $@11 stmtlist_body RCP

    LCP  shift, and go to state 99


State 50

  186 func_head: res_id . LP $@12 decl_plist RP

    LP  shift, and go to state 100


State 51

   92 factor: func_call .

    $default  reduce using rule 92 (factor)


State 52

    3 stmtlist: empty .

    $default  reduce using rule 3 (stmtlist)


State 53

    6 stmt: IF LP . exprc rp LCP $@1 stmtlist $@2 RCP elsestmt

    LP                shift, and go to state 5
    NOT               shift, and go to state 6
    ID                shift, and go to state 7
    NUM               shift, and go to state 8
    PROCESSOR         shift, and go to state 9
    LINK              shift, and go to state 10
    MEMORY            shift, and go to state 11
    JOB               shift, and go to state 12
    CLUSTER           shift, and go to state 13
    RUN               shift, and go to state 14
    DISCARD_JOB       shift, and go to state 15
    WAIT              shift, and go to state 16
    SCHEDULER         shift, and go to state 17
    SET_JOB_AFFINITY  shift, and go to state 18
    SET_ALGO          shift, and go to state 19
    CHARACTER         shift, and go to state 24

    $default  reduce using rule 61 (expression)

    id_arr       go to state 35
    exprc        go to state 101
    A            go to state 102
    expression   go to state 103
    initial      go to state 38
    mathexpr     go to state 39
    assignexpr   go to state 40
    arithexpr    go to state 41
    expr1        go to state 42
    expr2        go to state 43
    expr3        go to state 44
    expr4        go to state 45
    factor       go to state 46
    constructor  go to state 47
    func_call    go to state 51


State 54

    8 stmt: WHILE LP . exprc rp LCP $@3 stmtlist RCP

    LP                shift, and go to state 5
    NOT               shift, and go to state 6
    ID                shift, and go to state 7
    NUM               shift, and go to state 8
    PROCESSOR         shift, and go to state 9
    LINK              shift, and go to state 10
    MEMORY            shift, and go to state 11
    JOB               shift, and go to state 12
    CLUSTER           shift, and go to state 13
    RUN               shift, and go to state 14
    DISCARD_JOB       shift, and go to state 15
    WAIT              shift, and go to state 16
    SCHEDULER         shift, and go to state 17
    SET_JOB_AFFINITY  shift, and go to state 18
    SET_ALGO          shift, and go to state 19
    CHARACTER         shift, and go to state 24

    $default  reduce using rule 61 (expression)

    id_arr       go to state 35
    exprc        go to state 104
    A            go to state 102
    expression   go to state 103
    initial      go to state 38
    mathexpr     go to state 39
    assignexpr   go to state 40
    arithexpr    go to state 41
    expr1        go to state 42
    expr2        go to state 43
    expr3        go to state 44
    expr4        go to state 45
    factor       go to state 46
    constructor  go to state 47
    func_call    go to state 51


State 55

   10 stmt: FOR LP . expression semi exprc semi expression rp LCP $@4 stmtlist RCP

    LP                shift, and go to state 5
    NOT               shift, and go to state 6
    ID                shift, and go to state 7
    NUM               shift, and go to state 8
    PROCESSOR         shift, and go to state 9
    LINK              shift, and go to state 10
    MEMORY            shift, and go to state 11
    JOB               shift, and go to state 12
    CLUSTER           shift, and go to state 13
    RUN               shift, and go to state 14
    DISCARD_JOB       shift, and go to state 15
    WAIT              shift, and go to state 16
    SCHEDULER         shift, and go to state 17
    SET_JOB_AFFINITY  shift, and go to state 18
    SET_ALGO          shift, and go to state 19
    CHARACTER         shift, and go to state 24

    $default  reduce using rule 61 (expression)

    id_arr       go to state 35
    expression   go to state 105
    initial      go to state 38
    mathexpr     go to state 39
    assignexpr   go to state 40
    arithexpr    go to state 41
    expr1        go to state 42
    expr2        go to state 43
    expr3        go to state 44
    expr4        go to state 45
    factor       go to state 46
    constructor  go to state 47
    func_call    go to state 51


State 56

   11 stmt: SWITCH LP . arithexpr rp switchstmt

    LP         shift, and go to state 5
    NOT        shift, and go to state 6
    ID         shift, and go to state 7
    NUM        shift, and go to state 8
    PROCESSOR  shift, and go to state 9
    LINK       shift, and go to state 10
    MEMORY     shift, and go to state 11
    JOB        shift, and go to state 12
    CLUSTER    shift, and go to state 13
    SCHEDULER  shift, and go to state 17
    CHARACTER  shift, and go to state 24

    id_arr       go to state 57
    arithexpr    go to state 106
    expr1        go to state 42
    expr2        go to state 43
    expr3        go to state 44
    expr4        go to state 45
    factor       go to state 46
    constructor  go to state 47
    func_call    go to state 51


State 57

   88 factor: id_arr . DOT function
   90       | id_arr .

    DOT  shift, and go to state 81

    $default  reduce using rule 90 (factor)


State 58

   91 factor: LP arithexpr . rp

    error  shift, and go to state 107
    RP     shift, and go to state 108

    rp  go to state 109


State 59

   84 expr4: NOT factor .

    $default  reduce using rule 84 (expr4)


State 60

  209 func_call: ID LP . paramlist RP

    LP         shift, and go to state 5
    NOT        shift, and go to state 6
    ID         shift, and go to state 7
    NUM        shift, and go to state 8
    PROCESSOR  shift, and go to state 9
    LINK       shift, and go to state 10
    MEMORY     shift, and go to state 11
    JOB        shift, and go to state 12
    CLUSTER    shift, and go to state 13
    SCHEDULER  shift, and go to state 17
    CHARACTER  shift, and go to state 24

    $default  reduce using rule 211 (paramlist)

    id_arr       go to state 57
    arithexpr    go to state 110
    expr1        go to state 42
    expr2        go to state 43
    expr3        go to state 44
    expr4        go to state 45
    factor       go to state 46
    constructor  go to state 47
    func_call    go to state 51
    paramlist    go to state 111
    plist        go to state 112


State 61

   35 br_dimlist: LSP . mathexpr RSP
